start of the challenge 02

--- a/starter/index.html
+++ b/starter/index.html
@@ -1,45 +1,54 @@
 <!DOCTYPE html>
-<html lang="en-gb">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Lernantino // Web Developer</title>
-  <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="css/style.css"/>
 </head>
-
 <body>
   <!-- main logo / nav -->
   <header>
-    <h1>Lernantino</h1>
-    <nav>
-    </nav>
+    <logo><h1>Lernantino</h1></logo>
+      <nav>
+          <a href="#">About Me</a>
+          <a href="#">Work</a>
+          <a href="#">Contact Me</a>
+          <a href="https://1drv.ms/w/s!ArmX-YluwzYGg-cXrVW2di9xZBT24Q?e=dzGNON">Résumé</a>
+      </nav>
   </header>
-
-  <!-- hero banner -->
-  <section class="hero-banner">
-    <div>
-      <h2>Cool subtitle here!</h2>
+    <!-- hero banner -->
+  <main>
+    <div class="hero-image">
+      <div class="hero-text">
+        <h2>Cool subtitle here</h2>
+      </div>
     </div>
-  </section>
-
-  <main class="page-wrapper">
+    
     <!-- about me -->
-    <section class="page-section" id="about">
+    <section class="about">
       <h2>About Me</h2>
+      <p>some stuff about me eventually</p>
     </section>
-
     <!-- portfolio container -->
-    <section class="page-section" id="work">
+    <section class="work">
       <h2>Work</h2>
+      <p>will put some stiuff in here once I have done some work.</p>
     </section>
-
+  </main>  
     <!-- contact -->
-    <section class="page-section contact" id="contact">
+  
+  <footer class="page-section contact" id="contact">
       <h2>Contact Me</h2>
-    </section>
-  </main>
+        <nav>
+          <a href="+441234567890">Mobile Number</a>
+          <a href="https://github.com/kevmcgowan">Github</a>
+          <a href="https://www.linkedin.com/in/kevin-mcgowan-1aab0529/">LinkedIn</a>
+        </nav>
+  </footer>  
 </body>
 
 </html>
+
