code edit with the help of the tut or

--- a/starter/index.html
+++ b/starter/index.html
@@ -13,9 +13,9 @@
   <header>
     <logo><h1>Lernantino</h1></logo>
       <nav>
-          <a href="#">About Me</a>
-          <a href="#">Work</a>
-          <a href="#">Contact Me</a>
+          <a href="#about">About Me</a>
+          <a href="#work">Work</a>
+          <a href="#contact">Contact Me</a>
           <a href="https://1drv.ms/w/s!ArmX-YluwzYGg-cXrVW2di9xZBT24Q?e=dzGNON">Résumé</a>
       </nav>
   </header>
@@ -28,19 +28,19 @@
     </div>
     
     <!-- about me -->
-    <section class="about">
+    <section class="about" id="about">
       <h2>About Me</h2>
       <p>some stuff about me eventually</p>
     </section>
     <!-- portfolio container -->
-    <section class="work">
+    <section class="work" id="work">
       <h2>Work</h2>
-      <p>will put some stiuff in here once I have done some work.</p>
+      <p>will put some stuff in here once I have done some work.</p>
     </section>
   </main>  
     <!-- contact -->
   
-  <footer class="page-section contact" id="contact">
+  <footer class="contact" id="contact">
       <h2>Contact Me</h2>
         <nav>
           <a href="+441234567890">Mobile Number</a>
