add some puictures

--- a/starter/index.html
+++ b/starter/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- main logo / nav -->
   <header>
-    <logo><h1>Lernantino</h1></logo>
+    <logo class="logo"><button><h1>Lernantino</h1></button></logo>
       <nav>
           <a href="#about">About Me</a>
           <a href="#work">Work</a>
