changed the CSS back to grid after the tutor changed it to flexbox. Was not happ with the layout when I uploaded the code to pages

--- a/starter/index.html
+++ b/starter/index.html
@@ -11,11 +11,11 @@
 <body>
   <!-- main logo / nav -->
   <header>
-    <logo><h1>Lernantino</h1></logo>
+    <logo class="logo"><button><h1>Lernantino</h1></button></logo>
       <nav>
-          <a href="#">About Me</a>
-          <a href="#">Work</a>
-          <a href="#">Contact Me</a>
+          <a href="#about">About Me</a>
+          <a href="#work">Work</a>
+          <a href="#contact">Contact Me</a>
           <a href="https://1drv.ms/w/s!ArmX-YluwzYGg-cXrVW2di9xZBT24Q?e=dzGNON">Résumé</a>
       </nav>
   </header>
@@ -28,20 +28,20 @@
     </div>
     
     <!-- about me -->
-    <section class="about">
-      <h2>About Me</h2>
-      <p>some stuff about me eventually</p>
+    <section class="about" id="about">
+      <h2 class="h2">About Me</h2>
+      <p class="p">some stuff about me eventually</p>
     </section>
     <!-- portfolio container -->
-    <section class="work">
-      <h2>Work</h2>
-      <p>will put some stiuff in here once I have done some work.</p>
+    <section class="work" id="work">
+      <h2 class="h2">Work</h2>
+      <p class="p">will put some stuff in here once I have done some work.</p>
     </section>
   </main>  
     <!-- contact -->
   
-  <footer class="page-section contact" id="contact">
-      <h2>Contact Me</h2>
+  <footer class="contact" id="contact">
+      <h2 class h2>Contact Me</h2>
         <nav>
           <a href="+441234567890">Mobile Number</a>
           <a href="https://github.com/kevmcgowan">Github</a>
