trying to fix the folder merge

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- contact -->
   
   <footer class="contact" id="contact">
-      <h2 class h2>Contact Me</h2>
+      <h2 class="h2">Contact Me</h2>
         <nav>
           <a href="+441234567890">Mobile Number</a>
           <a href="https://github.com/kevmcgowan">Github</a>
