--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main>
     <div class="hero-image">
       <div class="hero-text">
-        <h2>Cool subtitle here</h2>
+        <h2>My First Profile Website Attempt</h2>
       </div>
     </div>
     
