--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <a href="#about">About Me</a>
           <a href="#work">Work</a>
           <a href="#contact">Contact Me</a>
-          <a href="https://1drv.ms/w/s!ArmX-YluwzYGg-cXrVW2di9xZBT24Q?e=dzGNON">Résumé</a>
+          <a href="#resume">Résumé</a>
       </nav>
   </header>
     <!-- hero banner -->
@@ -45,8 +45,8 @@
       <h2 class="h2">Contact Me</h2>
         <nav>
           <a href="+441234567890">Mobile Number</a>
-          <a href="https://github.com/kevmcgowan">Github</a>
-          <a href="https://www.linkedin.com/in/kevin-mcgowan-1aab0529/">LinkedIn</a>
+          <a href="https://github.com/">Github</a>
+          <a href="https://www.linkedin.com">LinkedIn</a>
         </nav>
   </footer>  
 </body>
